<resources>
    <string name="app_name">i210450</string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="login"><u>Log in</u></string>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
...
