...
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ratingstar_unfilled"/>
        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:text="Submit Feedback"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@drawable/green_rounded_rectangle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
...
