...
                android:layout_marginHorizontal="10dp"/>
        </LinearLayout>



        <Button
            android:id="@+id/book_button"
            android:text="Book an Appointment"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@drawable/green_rounded_rectangle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
...
