...

        <FrameLayout
            android:id="@+id/local_user"
            android:layout_width="100dp"
            android:layout_height="160dp"
            android:background="@drawable/white_rounded_rectangle"
            android:layout_above="@id/button_layout"
            android:layout_alignRight="@id/button_layout"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"/>

        <LinearLayout
            android:id="@+id/button_layout"
...
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/switch_icon"/>

            <Button
                android:id="@+id/end_button"
                android:layout_marginEnd="30dp"
                android:scaleX="0.4"
                android:scaleY="0.27"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
