...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_square_login">

        <TextView
            android:id="@+id/login_text"
            android:text="Login"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textColor="@color/white"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
...
            android:layout_height="wrap_content"
            android:layout_below="@id/password_box"
            android:layout_alignEnd="@id/password_box"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/login_button"
            android:text="Login"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="#50c1c9"
            android:background="@drawable/white_rounded_rectangle"
            android:layout_width="170dp"
...
