...
                android:text="Islamabad"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#918b8b"/>

            <Button
                android:id="@+id/sessions_button"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/gold_rounded_box"
                android:text="Booked Sessions"
                android:textSize="11sp"
                android:textColor="#156f77"/>

        </RelativeLayout>

        <LinearLayout
...
